--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,600;6..12,700&display=swap" rel="stylesheet"/><link rel="icon" href="/project-zebra/favicon.ico"/><title>project-zebra</title><script defer="defer" src="/project-zebra/js/chunk-vendors.c96492ce.js"></script><script defer="defer" src="/project-zebra/js/app.ad03e3d1.js"></script><link href="/project-zebra/css/app.71480762.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but project-zebra doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,600;6..12,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="/project-zebra/favicon.ico" />
+    <title>project-zebra</title>
+    <script
+      defer="defer"
+      src="/project-zebra/js/chunk-vendors.779100dc.js"
+    ></script>
+    <script defer="defer" src="/project-zebra/js/app.b5191fc6.js"></script>
+    <link href="/project-zebra/css/app.71480762.css" rel="stylesheet" />
+  </head>
+  <body>
+    <noscript
+      ><strong
+        >We're sorry but project-zebra doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
+      ></noscript
+    >
+    <div id="app"></div>
+  </body>
+</html>
