--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,400;6..12,600;6..12,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="/project-zebra/favicon.ico" />
+    <link rel="icon" href="./project-zebra/favicon.ico" />
     <title>project-zebra</title>
     <script
       defer="defer"
-      src="/project-zebra/js/chunk-vendors.779100dc.js"
+      src="./project-zebra/js/chunk-vendors.779100dc.js"
     ></script>
-    <script defer="defer" src="/project-zebra/js/app.b5191fc6.js"></script>
-    <link href="/project-zebra/css/app.71480762.css" rel="stylesheet" />
+    <script defer="defer" src="./project-zebra/js/app.b5191fc6.js"></script>
+    <link href="./project-zebra/css/app.71480762.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
